test/langtools/tools/javac/valhalla/primitive-classes/CheckFlattenableFlagFromClass.out
CheckFlattenableFlagFromClass.java:11:15: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: compiler.misc.type.null, FlattenableFlagFromClass.V)
1 error
